  and an example usage in xmltest.dsp
  (Patch request ID 678605)
- A suggestion by Ronald Fenner Jr (dormlock) to add #include <istream> and <ostream> for Apple's Project Builder 
  (Patch request ID 697642)
- A patch from ohommes that allows to parse correctly dots in element names and attribute names
  (Patch request 602600 and kylotan 701728)
- A patch from  hermitgeek ( James ) and wasteland for improper error reporting
- Reviewed by Lee, with the following changes:
	- Got sick of fighting the STL/non-STL thing in the windows build. Broke
	  them out as seperate projects.
	- I have too long not included the dsw. Added.
	- TinyXmlText had a protected Print. Odd.
	- Made LinkEndChild public, with docs and appropriate warnings.
	- Updated the docs.

2.2.0
- Fixed an uninitialized pointer in the TiXmlAttributes
- Fixed STL compilation problem in MinGW (and gcc 3?) - thanks Brian Yoder for finding this one
- Fixed a syntax error in TiXmlDeclaration - thanks Brian Yoder
- Fletcher Dunn proposed and submitted new error handling that tracked the row and column. Lee
  modified it to not have performance impact.
- General cleanup suggestions from Fletcher Dunn.
- In error handling, general errors will no longer clear the error state of specific ones.
- Fix error in documentation : comments starting with "<?--" instead of "<!--" (thanks ion_pulse)
- Added the TiXmlHandle. An easy, safe way to browse XML DOMs with less code.
- Added QueryAttribute calls which have better error messaging. (Proposed by Fletcher Dunn)
- Nodes and attributes can now print themselves to strings. (Yves suggestion)
- Fixed bug where entities with one character would confuse parser. (Thanks Roman)

2.2.1
- Additional testing (no more bugs found to be fixed in this release)
- Significant performance improvement to the cursor code.

2.2.2 ?
- User Data are now defined in TiXmlBase instead of TiXmlNode

