@@ -116,11 +116,6 @@ class TiXmlString
         return length () ? false : true;
     }
 
-    // Checks if a TiXmlString contains only whitespace (same rules as isspace)
-	// Not actually used in tinyxml. Conflicts with a C macro, "isblank",
-	// which is a problem. Commenting out. -lee
-//    bool isblank () const;
-
     // single char extraction
     const char& at (unsigned index) const
     {
