@@ -106,7 +106,7 @@ int main()
 		"<Item priority=\"1\" distance=\"far\">Talk to:"
 		"<Meeting where=\"School\">"
 		"<Attendee name=\"Marple\" position=\"teacher\" />"
-		"<Attendee name=\"Vo&#x82;\" position=\"counselor\" />"
+		"<Attendee name=\"Voel\" position=\"counselor\" />"
 		"</Meeting>"
 		"<Meeting where=\"Lunch\" />"
 		"</Item>"
@@ -208,7 +208,7 @@ int main()
 	attendee1.SetAttribute( "position", "teacher" );
 
 	TiXmlElement attendee2( "Attendee" );
-	attendee2.SetAttribute( "name", "Vo&#x82;" );
+	attendee2.SetAttribute( "name", "Voel" );
 	attendee2.SetAttribute( "position", "counselor" );
 
 	// Assemble the nodes we've created:
@@ -486,6 +486,67 @@ int main()
 	}
 #endif
 
+	// --------------------------------------------------------
+	// UTF-8 testing. It is important to test:
+	//	1. Making sure name, value, and text read correctly
+	//	2. Row, Col functionality
+	//	3. Correct output
+	// --------------------------------------------------------
+	{
+		TiXmlDocument doc( "utf8test.xml" );
+		doc.LoadFile();
+
+		TiXmlHandle docH( &doc );
+		// Get the attribute "value" from the "Russian" element and check it.
+		TiXmlElement* element = docH.FirstChildElement( "document" ).FirstChildElement( "Russian" ).Element();
+		const char correctValue[] = {	(char)0xd1, (char)0x86, (char)0xd0, (char)0xb5, (char)0xd0, (char)0xbd, (char)0xd0, (char)0xbd, 
+										(char)0xd0, (char)0xbe, (char)0xd1, (char)0x81, (char)0xd1, (char)0x82, (char)0xd1, (char)0x8c, 0 };
+		XmlTest( "UTF-8: Russian value.", correctValue, element->Attribute( "value" ), true );
+		XmlTest( "UTF-8: Russian value row.", 4, element->Row() );
+		XmlTest( "UTF-8: Russian value column.", 5, element->Column() );
+
+		const char russianElementName[] = {	(char)0xd0, (char)0xa0, (char)0xd1, (char)0x83,
+											(char)0xd1, (char)0x81, (char)0xd1, (char)0x81,
+											(char)0xd0, (char)0xba, (char)0xd0, (char)0xb8,
+											(char)0xd0, (char)0xb9, 0 };
+		const char russianText[] = "<\xD0\xB8\xD0\xBC\xD0\xB5\xD0\xB5\xD1\x82>";
+
+		TiXmlText* text = docH.FirstChildElement( "document" ).FirstChildElement( russianElementName ).Child( 0 ).Text();
+		XmlTest( "UTF-8: Browsing russian element name.",
+				 russianText,
+				 text->Value(),
+				 true );
+		XmlTest( "UTF-8: Russian element name row.", 7, text->Row() );
+		XmlTest( "UTF-8: Russian element name column.", 47, text->Column() );
+
+		// Now try for a round trip.
+		doc.SaveFile( "utf8testout.xml" );
+
+		// Check the round trip.
+		char savedBuf[256];
+		char verifyBuf[256];
+		int okay = 1;
+
+		FILE* saved  = fopen( "utf8testout.xml", "r" );
+		FILE* verify = fopen( "utf8testverify.xml", "r" );
+		if ( saved && verify )
+		{
+			while ( fgets( verifyBuf, 256, verify ) )
+			{
+				fgets( savedBuf, 256, saved );
+				if ( strcmp( verifyBuf, savedBuf ) )
+				{
+					okay = 0;
+					break;
+				}
+			}
+			fclose( saved );
+			fclose( verify );
+		}
+		XmlTest( "UTF-8: Verified multi-language round trip.", 1, okay );
+	}
+	
+
 	//////////////////////////////////////////////////////
 #ifdef TIXML_USE_STL
 	printf ("\n** Parsing, no Condense Whitespace **\n");
@@ -569,19 +630,16 @@ int main()
 			"<?xml version=\"1.0\" standalone=\"no\" ?>"
 			"<passages count=\"006\" formatversion=\"20020620\">"
 				"<psg context=\"Line 5 has &quot;quotation marks&quot; and &apos;apostrophe marks&apos;."
-				" It also has &lt;, &gt;, and &amp;, as well as a fake &#xA9;.\"> </psg>"
+				" It also has &lt;, &gt;, and &amp;, as well as a fake copyright &#xA9;.\"> </psg>"
 			"</passages>";
 
 		TiXmlDocument doc( "passages.xml" );
 		doc.Parse( passages );
 		TiXmlElement* psg = doc.RootElement()->FirstChildElement();
 		const char* context = psg->Attribute( "context" );
+		const char* expected = "Line 5 has \"quotation marks\" and 'apostrophe marks'. It also has <, >, and &, as well as a fake copyright \xC2\xA9.";
 
-		XmlTest( "Entity transformation: read. ",
-					"Line 5 has \"quotation marks\" and 'apostrophe marks'."
-					" It also has <, >, and &, as well as a fake \xA9.",
-					context,
-					true );
+		XmlTest( "Entity transformation: read. ", expected, context, true );
 
 		FILE* textfile = fopen( "textfile.txt", "w" );
 		if ( textfile )
@@ -597,7 +655,7 @@ int main()
 			fgets( buf, 1024, textfile );
 			XmlTest( "Entity transformation: write. ",
 					 "<psg context=\'Line 5 has &quot;quotation marks&quot; and &apos;apostrophe marks&apos;."
-					 " It also has &lt;, &gt;, and &amp;, as well as a fake &#xA9;.' />",
+					 " It also has &lt;, &gt;, and &amp;, as well as a fake copyright \xC2\xA9.' />",
 					 buf,
 					 true );
 		}
